subnet.tf
# Public Subnet

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.kafka_vpc.id

  cidr_block = "10.0.1.0/24"

  availability_zone = "us-east-1a"

  map_public_ip_on_launch = true

  tags = {
    Name = "Public-Subnet"
  }
}


# Private Subnet A

resource "aws_subnet" "private_a" {

  vpc_id = aws_vpc.kafka_vpc.id

  cidr_block = "10.0.2.0/24"

  availability_zone = "us-east-1a"

  tags = {
    Name = "Kafka-Private-A"
  }
}


# Private Subnet B

resource "aws_subnet" "private_b" {

  vpc_id = aws_vpc.kafka_vpc.id

  cidr_block = "10.0.3.0/24"

  availability_zone = "us-east-1b"

  tags = {
    Name = "Kafka-Private-B"
  }
}


# Private Subnet C

resource "aws_subnet" "private_c" {

  vpc_id = aws_vpc.kafka_vpc.id

  cidr_block = "10.0.4.0/24"

  availability_zone = "us-east-1c"

  tags = {
    Name = "Kafka-Private-C"
  }
}
